--- a/app/views/home/_principal_wall_menu.html.erb
+++ b/app/views/home/_principal_wall_menu.html.erb
@@ -1,18 +1,29 @@
-	<div class="underline">
-		<%= link_to image_tag(current_user.avatar_file.small.url), current_user%>
-	</div>
-    <!--<h3>Menú Principal</h3>
-     <div class="line"></div>
-	<%#= tabs_tag(:builder => MenuTabBuilder, :open_tabs => { :class => "left-nav-main-ul" }) do |tab| %>
-	    <%#= tab.course "Panel de control", dashboard_path, :class => "info" %>
-	    <%#= tab.courses "Campañas", courses_path, :class => "favoritos" %>
-	 <%# end %>
-	-->
-	<h3>Mis favoritos</h3>
-	<% @user.favorites.each do |user_favorites| %>
-	   <%=link_to image_tag(user_favorites.avatar), user_path(user_favorites.user_favorite_id), :rel => "dashboard-tip", :title => (user_favorites.name) %>
-	<%end%>
-   
-      <%= link_to "Mis Contactos", my_favorite_users_path %>
-      
-      
+<div class="underline">
+	<%= link_to image_tag(current_user.avatar_file.small.url), current_user%>
+</div>
+<!--<h3>Menú Principal</h3>
+ <div class="line"></div>
+<%#= tabs_tag(:builder => MenuTabBuilder, :open_tabs => { :class => "left-nav-main-ul" }) do |tab| %>
+    <%#= tab.course "Panel de control", dashboard_path, :class => "info" %>
+    <%#= tab.courses "Campañas", courses_path, :class => "favoritos" %>
+ <%# end %>
+-->
+<h3>Mis favoritos</h3>
+<% @user.favorites.each do |user_favorites| %>
+   <%=link_to image_tag(user_favorites.avatar), user_path(user_favorites.user_favorite_id), :rel => "dashboard-tip", :title => (user_favorites.name) %>
+<%end%>
+<%= link_to "Mis Contactos", my_favorite_users_path %>
+
+<h3>Campañas</h3>
+<ul style="list-style-type: none;padding: 0px; margin: 0px;">
+	<% active_courses = 0 %>
+	<% @user.courses.each do |course| %>
+		<% unless course.status == "finish" %>
+			<% active_courses += 1 %>
+			<li><%= link_to(course.name, wall_for_course_path(course)) %></li>
+		<% end %>
+	<% end %>
+	<% if active_courses == 0 %>
+		No eres miembro de una campaña. <%= link_to('Ver campañas', courses_path) %>
+	<% end %>
+</ul>
